<resources>
    <string name="app_name">Multiplication Game</string>

    <!-- Text Views -->
    <string name="txt_account_info">Account Info</string>
    <string name="txt_already_have_an_account">Already have an account? <b>Sign In</b></string>
    <string name="txt_don_t_have_an_account">Don\'t have an account? <b>Sign Up</b></string>
    <string name="txt_edit_profile">Edit Profile</string>
    <string name="txt_email">Email</string>
    <string name="txt_enter_email_address_to_send_reset_code">Enter email address to send reset code.</string>
    <string name="txt_forgot_password">Forgot password</string>
    <string name="txt_forgot_password_question">Forgot password?</string>
    <string name="txt_full_name">Full Name</string>
    <string name="txt_lets_get_started">Let\'s get started</string>
    <string name="txt_must_sign_in_2">You must sign in to see your profile.</string>
    <string name="txt_password_reset">Password Reset</string>
    <string name="txt_password_reset_mail_sent">Email sent successfully to reset your password!</string>
    <string name="txt_please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="txt_please_wait">Please wait…</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_sign_in">Sign In</string>
    <string name="txt_sign_in_header_2">Enter your email and password to continue.</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="txt_update_profile">Update Profile</string>
    <string name="txt_welcome">Welcome</string>
    <string name="txt_congratulations">Congratulations!</string>
    <string name="txt_sign_up_successful">Your account has been
        verified successfully! You can now
        proceed to sign in.</string>
    <string name="txt_table_format">Table of %1$s (%2$s)</string>
    <string name="txt_timer_format">%1$s:%2$s</string>
    <string name="txt_equation_format">%1$d x %2$d</string>
    <string name="txt_type_format">➜ Type: %1$s</string>

    <!-- Snackbar -->
    <string name="txt_error_registration_failed">An error has occurred with registration, please contact our support team.</string>
    <string name="txt_error_empty_name">Please enter your full name.</string>
    <string name="txt_error_empty_password">Please enter your password.</string>
    <string name="txt_error_empty_email">Please enter your email.</string>
    <string name="txt_error_empty_answer">The answer cannot be empty 😭</string>
    <string name="txt_error_empty_full_name">Name cannot be empty 😭</string>
    <string name="txt_success_done">Done!</string>
    <string name="txt_success_update_user">The user details have been successfully updated.</string>

    <!-- Buttons -->
    <string name="txt_tables">Tables</string>
    <string name="txt_start_test">Start Test</string>
    <string name="txt_history">History</string>
    <string name="txt_dismiss">Dismiss</string>
    <string name="button_send">Send</string>
    <string name="button_dismiss">Dismiss</string>
    <string name="button_try_again">Try Again</string>
    <string name="button_sign_out">Sign Out</string>

    <!-- Input Texts -->
    <string name="input_txt_hint_dash">-</string>
    <string name="input_txt_hint_email">Your email address</string>
    <string name="input_txt_hint_password">Your password</string>
    <string name="input_txt_hint_full_name">Your full name</string>
    <string name="txt_completed">Completed!</string>
    <string name="txt_solve_the_multiplication">Solve the multiplication</string>
    <string name="txt_time_left">Time Left:</string>
    <string name="txt_next">Next</string>
    <string name="txt_skip">Skip</string>
    <string name="txt_clear">Clear</string>
    <string name="txt_exit_confirmation">Exit Confirmation</string>
    <string name="txt_exit_confirmation_2">Are you sure you want to exit the test? This will count as a skip.</string>
    <string name="txt_yes">Yes</string>
    <string name="txt_skip_confirmation">Skip Confirmation</string>
    <string name="txt_skip_confirmation_2">Are you sure you want to skip this multiplication? This will count as a skip.</string>
    <string name="txt_time_out_2">Your time has an out. You may have to improve your solve speed. You will be redirected to next multiplication in 10 seconds.</string>
    <string name="txt_time_out">Time Out!</string>
    <string name="txt_learn">Learn</string>
    <string name="txt_learn_about_multiplication_tables">Learn</string>

    <string name="txt_section_1">Section 1</string>
    <string name="txt_section_2">Section 2</string>
    <string name="txt_basics_header_1">1. Relating multiplication to addition</string>
    <string name="txt_basics_context_1">➜ 2 x 2 is the same as 2 + 2<br/>\nor<br/>\n➜ 3 x 4 is the same as 4 + 4 + 4
    </string>

    <string name="txt_section_1_desc">This section covers the basic stuff 😎</string>
    <string name="txt_section_2_desc">This section will get you started with multiplication 🥰</string>
    <string name="txt_section_3_desc">The section will show you some awesome tricks! 🤓</string>

    <string name="txt_section_1_basics">Section 1: Basics</string>
    <string name="txt_section_1_header_2">2. Start with the multiples of zero and one</string>
    <string name="txt_section_1_context_2">
        Adding zero to a number has no effect on its identity:<br/>\n<b>➜ n + 0 = n</b><br/>\nin multiplication, any number multiplied by zero is also zero:<br/>\n<b>➜ n x 0 = 0</b><br/>\n0 is a void!<br/>\n<br/>\nMultiplying by one (The identity property):<br/>\nIn short, the identity property states that the product of a given number and one is that number itself:<br/>\n<b>➜ n x 1 = n</b><br/>\n<br/>\nMultiplying a number by one results in the same value. Let\'s say, one x 10 apples results to 10 apples. 1 is a mirror!
    </string>
    <string name="txt_section_3">Section 3</string>
    <string name="txt_section_4">Section 4</string>
    <string name="txt_section_2_getting_started">Section 2: Getting Started</string>
    <string name="txt_8_groups_of_2_16">8 groups of 2 = 16</string>
    <string name="txt_8_x_2">8 x 2</string>
    <string name="txt_getting_started_header_1">The commutative property</string>
    <string name="txt_getting_started_context_1">Just like addition, multiplication is commutative, meaning the order of factors doesn\'t change the product (the answer).<br/>\n<br/>\nIn other words, two numbers can be multiplied in any order, and the product will be the same. For example, multiplying 8 x 2 will give you the same answer as multiplying 2 x 8.
    </string>
    <string name="txt_2_groups_of_8_16">2 groups of 8 = 16</string>
    <string name="txt_rotate_the_array">Rotate the array</string>
    <string name="txt_section_3_techniques">Section 3: Techniques</string>
    <string name="txt_section_3_header_1">1. The associative property</string>
    <string name="txt_section3_context_1">The rule of associative property states that no matter the way you group factors, the product will always be the same.<br/>\n<br/>\nFor example,<br/>\n➜ (a x b) x c = a x (b x c)<br/>\nor<br/>\n➜ (1 x 2) x 3 = 1 x (2 x 3)
    </string>
    <string name="txt_section_3_header_2">2. The distributive property</string>
    <string name="txt_section3_context_2">The distributive property is symbolized as:<br/>\n➜ <b>a(b + c) = (ab) + (ac)</b><br/>\n<br/>\nPut simply, the property spreads out — or, as its name implies, distributes — the value of a equally to b and c.<br/>\n<br/>\nFor example,<br/>\nfor 6 x 8, they may use the distributive property to think:<br/>\n➜ <b>(6 x 5) + (6 x 3)</b>, or <b>30 + 18</b>
    </string>
    <string name="txt_date_registered">Date Registered</string>
    <string name="txt_save">Save</string>
    <string name="button_logout">Logout</string>
    <string name="txt_wrong_answer">Wrong answer 😭</string>
    <string name="txt_wrong_answer_2">Your answer wasn\'t correct but I am pretty sure you will get it next time!</string>
    <string name="txt_correct_answer">Correct! ✅</string>
    <string name="txt_correct_answer_2">You are awesome! Well done, your answer is correct, keep it up!</string>
    <string name="txt_test_done_2">That was it! Here are your performance results:</string>
    <string name="txt_correct_answers">➜ Correct Answers:</string>
    <string name="txt_wrong_answers">➜ Wrong Answers:</string>
    <string name="txt_sort_by">Sort By</string>
    <string name="txt_sort">Sort</string>
    <string name="txt_date_added">Date Added</string>
    <string name="txt_type">Type</string>
    <string name="txt_no_history">No history found!</string>
    <string name="txt_no_history_2">Start by doing some multiplications to track your performance!</string>
    <string name="txt_type_mistake">Mistakes</string>
    <string name="txt_type_time_ups">Time Ups</string>
    <string name="txt_type_solved">Solved</string>
    <string name="txt_type_skips">Skips</string>


    <!-- Help Texts -->
    <string name="txt_help_title">Guide</string>
    <string name="txt_main_help"><b>1. How can I get a mathematical training?</b> <br/>\n1.1 Push the button "LEARN".<br/>\n1.2 Choose between the 3 sections or the TABLE section sliding right or left!!<br/>\n2. How can I start a test?<br/>\n2.1 You can start a test pushing the button "START TEST" from the main menu.<br/>\n2.2 You can start a test pushing the button "TABLES" from the main menu and select the multiplications table you want to exercise.<br/>\n<b>3. How can I see my profile details?</b><br/>\n3.1 You can see your profile details by pressing the button with the human figure from the main menu.<br/>\n<b>4. How can I edit my name?</b> <br/>\n4.1 You can edit your name by pressing the button with the human figure from the main menu.<br/>\n4.2 Then push the button with the pencil on it which is located in the top right corner.<br/>\n4.3 Write the name you want in the brackets and click the button "SAVE".<br/>\n<b>5. How can I log out?</b><br/>\n5.1 You can log out from the profile page by pressing the button with the human figure from the main menu and then press the button "LOGOUT".<br/>\n<b>6. How can I see my progress?</b><br/>\n6.1 You can see your progress by pressing the button "HISTORY"<br/>\n6.2 You can sort your progress by date pressing the button which is located in the top right corner and select the option "DATE ADDED"<br/>\n6.3 You can sort your progress by type pressing the button which is located in the top right corner and select the option "TYPE"</string>
    <!-- Start Test Texts -->
    <string name="txt_help_test">Write your answer in the brackets, you can press the arrow button to write and press the button "NEXT" to see the next equation.<br/>\nIf you wrote the wrote an answer that you didn\'t want to you can press the button "CLEAR" to clear what you wrote and write again your answer.</string>
    <!-- Start Test Tables Texts -->
    <string name="txt_help_tables_test">Write your answer in the brackets, you can press the arrow button to write and press the button "NEXT" to see the next equation.<br/>\nIf you don\'t know the answer you can press the button "SKIP" but it will be counted as a mistake!!<br/>\nIf you wrote the wrote an answer that you didn\'t want to you can press the button "CLEAR" to clear what you wrote and write again your answer.</string>


</resources>