<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/transparent"
    android:fillViewport="true"
    tools:context=".ui.fragments.LearnSectionThirdFragment"
    tools:ignore="contentDescription">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/shape_container_all_corners"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txtView_Header"
                style="@style/TextView_Medium_Bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="16dp"
                android:text="@string/txt_section_3_techniques"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/txt_font_size_header_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtView_Header_Desc"
                style="@style/TextView_Regular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/txt_section_3_desc"
                android:textColor="@color/colorTextLightPurple"
                android:textSize="@dimen/txt_font_size_header_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtView_Header" />

            <TextView
                android:id="@+id/txtView_Header_1"
                style="@style/TextView_Medium_Bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="39dp"
                android:layout_marginEnd="16dp"
                android:text="@string/txt_section_3_header_1"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtView_Header_Desc" />

            <TextView
                android:id="@+id/txtView_Context_1"
                style="@style/TextView_Regular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/txt_section3_context_1"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtView_Header_1" />

            <ImageView
                android:id="@+id/imgView_Associative"
                android:layout_width="0dp"
                android:layout_height="220dp"
                android:layout_marginTop="16dp"
                android:scaleType="fitXY"
                android:src="@drawable/webp_learn_associative_property"
                app:layout_constraintEnd_toEndOf="@+id/txtView_Context_1"
                app:layout_constraintStart_toStartOf="@+id/txtView_Context_1"
                app:layout_constraintTop_toBottomOf="@+id/txtView_Context_1" />

            <TextView
                android:id="@+id/txtView_Context_2"
                style="@style/TextView_Regular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="28dp"
                android:text="@string/txt_section3_context_2"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtView_Header_2" />

            <TextView
                android:id="@+id/txtView_Header_2"
                style="@style/TextView_Medium_Bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:text="@string/txt_section_3_header_2"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgView_Associative" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>